--- a/Calculadora/views/resultado.erb
+++ b/Calculadora/views/resultado.erb
@@ -1,4 +1,4 @@
-<h1> El resultado es: <%=@cant%> </h1>
+<h1> El resultado es: <%=@resultado_operacion%> </h1>
 <form method="post" action="/volver">
     <input type="submit" value="Volver">
 </form>
