--- a/Calculadora/views/vista.erb
+++ b/Calculadora/views/vista.erb
@@ -1,13 +1,13 @@
 <h1> Calculadora</h1>
 <form method="post" action="/resultado">
-    <input type="text" name="ElA" placeholder="Elemento 1">
-    <label for="operacion">Seleccione Operacion:</label>
-    <select id="operacion" name="Op">
+    <input type="text" name="Elemento_1" placeholder="Elemento 1">
+    <label for="operacion">Seleccione Operación:</label>
+    <select id="operacion" name="Operation">
         <option value="suma">Suma</option>
         <option value="resta">Resta</option>
         <option value="multiplicacion">Multiplicacion</option>
         <option value="division">Division</option>
     </select>
-    <input type="text" name="ElB"  placeholder="Elemento 1">
+    <input type="text" name="Elemento_2"  placeholder="Elemento 2">
     <input type="submit" value="Calcular">
 </form>
